code checks only words without punctuation marks